--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,37 +64,11 @@
             android:layout_gravity="center">
 
             <TextView
-                android:id="@+id/localCurrencySet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/local_currency"
-                android:layout_gravity="center"/>
-
-            <Spinner
-                android:id="@+id/localSpinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/confirm"
-                android:onClick="confirmClicked"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="false"
                 android:ems="6"
-                android:text="@string/your_currency"
+                android:text="@string/aud"
                 android:textAlignment="center"
                 tools:ignore="LabelFor" />
 
@@ -143,7 +117,7 @@
                 android:ems="5"
                 android:importantForAutofill="no"
                 android:inputType="number"
-                android:text="@string/blank"
+                android:text="@string/zero"
                 android:textAlignment="center"
                 tools:ignore="LabelFor" />
         </TableRow>
@@ -153,13 +127,40 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/conversionButton"
+                android:id="@+id/localConversionButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48sp"
                 android:layout_marginEnd="48sp"
                 android:onClick="convertClicked"
-                android:text="@string/convert" />
+                android:text="@string/convert_to_local_currency" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/homeConversionButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48sp"
+                android:layout_marginEnd="48sp"
+                android:onClick="convertClicked"
+                android:text="@string/convert_to_home_currency" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                android:onClick="check"/>
         </TableRow>
     </LinearLayout>
 
